--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -329,15 +329,18 @@ The disambiguating paraphrases behave as expected: \emph{each} delivers a distri
 
 As discussed above, one candidate factor is the contextual predictability of the collective property: how easy it is for speakers and listeners to arrive at the same collective property for a given set of objects. We have seen that collective weight is a stable property of sets, which stands to explain the complaisance of \emph{heavy} toward collective interpretations. In the context of the current experiment, collective height is also predictable: boxes  always appeared stacked one on top of the other, yielding stable total set heights. Collective size, however, could vary depending on the strategy used to evaluate it (height? width? area? volume?) as well as on the arrangement of the objects said to hold it, thus accounting for the lack of collective interpretations for bare \emph{big}. In Expt.~3, we use the paraphrase methodology to directly investigate the role of contextual predictability in plural predication.
 
-The results of the current experiment does not rule out a role of speaker knowledge in plural predication: based solely on whether the context scenario had Cubert move vs.~inspect the boxes he received, we see a trend whereby bare \emph{heavy} received more or less collective interpretations, respectively. The absence of the effect for \emph{big} and \emph{tall} suggests an explanation in terms of the epistemic state of the speaker: in ``move'' scenarios, the speaker is less likely to have access to individual box weights; the listener is therefore less likely to assume that the speaker, Cubert, intended a distributive interpretation for which he lacks evidence. We attempt to confirm this effect with a similar scenario manipulation in Expt.~3.
+The results of the current experiment do not rule out a role of speaker knowledge in plural predication: based solely on whether the context scenario had Cubert move vs.~inspect the boxes he received, we see a trend whereby bare \emph{heavy} received more or less collective interpretations, respectively. The absence of the effect for \emph{big} and \emph{tall} suggests an explanation in terms of the epistemic state of the speaker: in ``move'' scenarios, the speaker is less likely to have access to individual box weights; the listener is therefore less likely to assume that the speaker, Cubert, intended a distributive interpretation for which he lacks evidence. We attempt to confirm this effect with a similar scenario manipulation in Expt.~3.
 
 But before we manipulate contextual predictability and speaker knowledge directly, we extend the paraphrase methodology in Expt.~2 to naturally-occurring examples of plural predication, investigating the role of the local linguistic context.
 
 
 \section{Experiment 2: Naturally-occurring examples}
 
-In Expt.~1, we used a reference task to evaluate disambiguating paraphrases of plural predications. However, by providing potential referents, we gave participants specific and salient physical arrangements (e.g., box stacks) against which to evaluate interpretations of predicates. Here, we move away from specific arrangements and use the disambiguating paraphrases from Expt.~1 to directly probe interpretations of plural predications.
-To ensure a robust test of this paraphrase methodology, we extend our sights beyond just big/tall/heavy boxes, and look at frequent linguistic contexts for plural predication. Doing so provides insight into the role the local linguistic context plays in the disambiguation of plural predication.
+In Expt.~1, we used a reference task to validate disambiguating paraphrases as a probe of interpretations of plural predications. 
+In the next experiment we use the paraphrase methodology to evaluate natural plural predications gathered from corpora. We aim to both extend our understanding of distributive vs.~collective preferences to predicates beyond \emph{big/tall/heavy}, and explore the effect of linguistic context: how the head noun affects this preference.
+
+%However, by providing potential referents, we gave participants specific and salient physical arrangements (e.g., box stacks) against which to evaluate interpretations of predicates. Here, we move away from specific arrangements and use the disambiguating paraphrases from Expt.~1 to directly probe interpretations of plural predications.
+%We extend beyond big/tall/heavy boxes, to look at frequent linguistic contexts for plural predication. Doing so provides insight into the role the local linguistic context plays in the disambiguation of plural predication.
 
 \subsection{Experiment 2a: Frequent plural predications}
 
@@ -353,22 +356,25 @@ In a search of the British National Corpus, we identified the 40 most frequent s
 
 \ex. The \textsc{noun}s were \textsc{adjective}.
 
-Participants were presented with 30 sentences; 15 of these sentences were naturally-occurring examples from the original set of the 40 most frequent instances. The other 15 sentences were constructed by randomly pairing subjects and predicates from the original set of 40 to create novel sentences.
+Each participant was presented with 30 sentences; 15 of these sentences were drawn randomly \ndg{was it random?} from the original set of the 40 most frequent instances. The other 15 sentences were constructed by randomly pairing subjects and predicates from the original set of 40 to create novel sentences. \ndg{were there any restrictions? eg could a participant see the same predicate / subject twice? were the constructed sentences really random for each participant, or was there a fixed set of them?}
 
-Each sentence was presented as an utterance by a speaker, and participants were tasked with determining what the speaker meant. Participants rated two possible paraphrases on a sliding scale. The paraphrases were either distributive (with ``each'', \ref{bnc-each}) or collective (with ``together'', \ref{bnc-together}). 
+Each sentence was presented as an utterance by a speaker, and participants were tasked with determining what the speaker meant. Participants rated two possible paraphrases on a sliding scale. The paraphrases were either distributive (with ``each'', \ref{bnc-each}) and collective (with ``together'', \ref{bnc-together}). 
 
 \ex. \a. The \textsc{noun}s each were \textsc{adjective}. \label{bnc-each}
 \b. The \textsc{noun}s together were \textsc{adjective}. \label{bnc-together}
 
-Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what the speaker intended by his or her utterance. Before rating its paraphrases, participants judged whether the utterance made sense (choosing between "Yes" and "No"). In the analyses reported below, we only look at responses to utterances that participants said made sense.
+Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what the speaker intended by his or her utterance. Before rating its paraphrases, participants judged whether the utterance made sense (choosing between "Yes" and "No"). 
 
-\subsubsection{Predictions}
-
-Our primary goal is to evaluate the viability of our paraphrase methodology with endorsement ratings. If participants understand our task and fully use the sliders to indicate their preferences, we should see a range of paraphrase endorsement ratings. Additionally, if the interpretations of plural predications depend on the immediate linguistic context---that is, on the subjects and predicates involved---we should find by-noun and by-predicate variation in distributive vs.~collective interpretation rates.
+%\subsubsection{Predictions}
+%
+%Our primary goal is to evaluate the viability of our paraphrase methodology with endorsement ratings. If participants understand our task and fully use the sliders to indicate their preferences, we should see a range of paraphrase endorsement ratings. Additionally, if the interpretations of plural predications depend on the immediate linguistic context---that is, on the subjects and predicates involved---we should find by-noun and by-predicate variation in distributive vs.~collective interpretation rates.
 
 \subsubsection{Results}
 
-We begin modestly, with a look at the range of collective endorsement ratings.\footnote{A look at distributive endorsement ratings, or normalized collective ratings (i.e., the difference between collective and distributive ratings) reveals similar patterns of results.} Fig.~\ref{sentence-coll} plots average collective endorsement ratings for each of the 40 most frequent sentences.
+\ndg{give some stats on the 'makes sense' judgements: of the original sentences, what was the mean percent sensible? range? for the constructed sentences?}
+In the analyses reported below, we only look at responses to utterances that participants said made sense. \ndg{why?}
+
+We begin with a look at the range of collective endorsement ratings.\footnote{A look at distributive endorsement ratings, or normalized collective ratings (i.e., the difference between collective and distributive ratings) reveals similar patterns of results.} Fig.~\ref{sentence-coll} plots average collective endorsement ratings for each of the 40 most frequent sentences.
 
 \begin{figure}[h!]
 	\centering
@@ -377,28 +383,42 @@ We begin modestly, with a look at the range of collective endorsement ratings.\f
 	\caption{Collective paraphrase endorsement rates for different noun-predicate combinations in Expt.~2a (i.e., for different sentences).} \label{sentence-coll}
 \end{figure}
 
-Descriptively, we see a wide range of ratings, spanning from approximately 25\%  to 85\% endorsement; participants appear to be comfortable using the full scale. Another remarkable property of the distribution of ratings in Fig.~\ref{sentence-coll} is its relatively smooth gradient: we fail to find clear groupings of predicates, such that they behave in one way or another with respect to collective interpretations. Stubbornly distributive \emph{small} indeed occurs toward the low end of collective endorsement ratings, but not markedly so.
-More relevant to our present purposes are those predicates that occur with different subject nouns. There are 8 such predicates in our small corpus; we plot their average collective endorsement ratings in Fig.~\ref{noun-pred-coll}.
+Descriptively, we see a wide range of ratings, spanning from approximately 25\%  to 85\% endorsement; participants appear to be comfortable using the full scale. An important observation about the distribution of ratings in Fig.~\ref{sentence-coll} is its relatively smooth gradient: we fail to find clear groupings of predicates, such that they behave in one way or another with respect to collective interpretations. Stubbornly distributive \emph{small} indeed occurs toward the low end of collective endorsement ratings, but not markedly so.
 
+There are 8 predicates that occur with different subject nouns in our small corpus; we plot their average collective endorsement ratings in Fig.~\ref{noun-pred-coll}.
+%
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=.85\linewidth]{plots/noun_pred_plot2.eps}
 	%\vspace{0pt}
 	\caption{Collective paraphrase endorsement rates for different subject nouns grouped by predicate (Expt.~2a).} \label{noun-pred-coll}
 \end{figure}
+%
+Rates of collective endorsement differ by subject noun for one and the same predicate. We draw the reader's attention to the case of stubbornly distributive \emph{small} (bottom right). 
+If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics of these predicates, we should find no effect of the subject noun in the determination of their distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. But as \emph{small} in Fig.~\ref{noun-pred-coll} demonstrates, they are not. 
+%More importantly, the subject \emph{numbers} stands out in its relatively high rates of collective endorsement with the predicate \emph{small}. 
+A linear mixed effects model predicting collective endorsement rates by subject noun for \emph{small}, with random by-participant intercepts, finds that sentences with the subject \emph{numbers} received greater rates of collective endorsement than sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).\footnote{We find the same pattern of results if instead we compare each subject noun with the grand mean (i.e., through effect, or deviation, coding of our variables): \emph{numbers} deviates significantly, while the other nouns do not.}
 
-As Fig.~\ref{noun-pred-coll} demonstrates, rates of collective endorsement differ by subject noun for one and the same predicate. We draw the reader's attention to the case of stubbornly distributive \emph{small} (bottom right). 
-If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics of these predicates, we should find no effect of the subject noun in the determination of their distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. But as \emph{small} in Fig.~\ref{noun-pred-coll} demonstrates, they are not. More importantly, the subject \emph{numbers} stands out in its relatively high rates of collective endorsement with the predicate \emph{small}. A linear mixed effects model predicting collective endorsement rates by subject noun for \emph{small}, with random by-participant intercepts, finds that sentences with the subject \emph{numbers} received greater rates of collective endorsement than sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).\footnote{We find the same pattern of results if instead we compare each subject noun with the grand mean (i.e., through effect, or deviation, coding of our variables): \emph{numbers} deviates significantly, while the other nouns do not.}
+\ndg{we should have some analysis of the other seven predicates -- maybe there is an overall test of whether noun matters? or do tests within predicates (add significance stars to the figure...).}
 
 \subsubsection{Discussion}
 
-We have extended our paraphrase methodology beyond a simple reference task, using naturally-occurring examples of plural predications. Our goals here were modest: to understand better the terrain of interpretation preferences for plural predications, without special attention to particular classes of predicates or subjects. Participants demonstrated full use of the paraphrase endorsement rating scales provided. Moreover, their patterns of ratings begin to shed light on the disambiguation of plural predication. Perhaps most obvious is the absence of clear groupings of predicates: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}.
+We have extended our paraphrase methodology beyond a simple reference task, using naturally-occurring examples of plural predications.
+% Our goals here were modest: to understand better the terrain of interpretation preferences for plural predications, without special attention to particular classes of predicates or subjects. Participants demonstrated full use of the paraphrase endorsement rating scales provided. Moreover, 
+The pattern of ratings sheds some light on the interpretation of plural predication. Perhaps most obvious is the absence of clear groups of predicates: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}.
 
-After considering the full set of sentences, we narrowed our focus to those predicates occurring in more than one sentence (i.e., with different subject nouns). Narrower still, we highlighted the case of stubbornly distributive \emph{small}, showing that the subject \emph{numbers} yielded higher rates of collective endorsement. Allow us to suggest an explanation for the exceptional behavior of \emph{numbers}: faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers is relatively predictable in context, more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). Moreover, numbers do not physically instantiate, so the contextual predictability of their collective size will not suffer from potential variability in their arrangement. We explore this idea further in Expt.~2b, where we limit our naturally-occurring examples to a more theoretically relevant set of predicates: \emph{big}, \emph{heavy}, and \emph{tall}.
+The fact that disambiguation preferences differ by subject noun, not only by predicate further shifts the theoretical focus from lexical classes of predicates. If a plural predication can be more or less collective depending on the subject, then we must look at least partly to context in order to understand interpretation preferences.
+
+%After considering the full set of sentences, we narrowed our focus to those predicates occurring in more than one sentence (i.e., with different subject nouns). Narrower still, 
+
+We highlighted the case of stubbornly distributive \emph{small}, showing that the subject \emph{numbers} yielded higher rates of collective endorsement than other subject nouns. One possible explanation for the exceptional behavior of \emph{numbers} is thus: The collective size of numbers is naturally their sum, 
+%Faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers 
+which is relatively predictable in context---more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). Moreover, numbers do not physically instantiate, so the contextual predictability of their collective size will not suffer from potential variability in their arrangement. 
+We explore this idea further in Expt.~2b, focussing on the theoretically relevant set of predicates: \emph{big}, \emph{heavy}, and \emph{tall}. \ndg{why?}
 
 \subsection{Experiment 2b: \emph{big}, \emph{heavy}, \emph{tall}}
 
-Expt.~2a tested our paraphrase endorsement methodology using the 40 most frequent plural predications in the British National Corpus. Here we shift our sights to predicates more directly of interest to the current investigation of stubborn distributivity: \emph{big}, \emph{heavy}, and \emph{tall}. Due to the limited number of instances of plural predication with these predicates in the British National Corpus, we use instead the much larger Google Books Corpus \citep{davies2011}.
+We next shift our sights to predicates more directly of interest to the current investigation of stubborn distributivity: \emph{big}, \emph{heavy}, and \emph{tall}. Due to the limited number of instances of plural predication with these predicates in the British National Corpus, we use instead the much larger Google Books Corpus \citep{davies2011}.
 
 \subsubsection{Participants}
 
